# ca_knell

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml
scripts/: 010-clean_cmip5.py  010-clean_employment_risk_binned.py  010-clean_population_age_binned.py  012-clean_population_age_binned.py  013-clean_pci2019.py  014-clean_employment_risk_binned.py  025-make_gdppc_residual_scaled.py  clean_cmip5_smme_weights.py  experiment_compress_clean_cmip5_dataset.py
scripts/energy/: make_dds.py
scripts/labor/: make_labor_gamma.py  transform2impacts_with_dynamic_gamma.py
scripts/mortality/: apply_transforms_test.py  make_binned_tas_DRAFT.py  make_climtas_DRAFT.py  make_mortality_gamma.py  mort_transform2damages_DRAFT.py  mortality_projection_beta_test.py  mortality_projection_gamma_test.py  transform2impacts_with_dynamic_gamma.py  transform2impacts_with_dynamic_sampled_gamma.py
src/ca_knell/: core.py  io.py
src/ca_knell/energy/: auffhammer2022.py  projection.py  transformation.py  valuation.py
src/ca_knell/labor/: __init__.py  projection.py  transformation.py  valuation.py
src/ca_knell/mortality/: __init__.py  projection.py  transformation.py
tests/: test_io.py  test_various.py
tests/energy/: test_auffhammer_dds.py  test_projection.py  test_transformation.py  test_valuation.py
tests/labor/: test_projection.py  test_transformation.py  test_valuation.py
tests/mortality/: test_projection.py  test_transformation.py
