[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ca_knell"
description = "Petting zoo playing with climate impact projections with muuttaa"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "fsspec",
    "metacsv",
    "muuttaa",
    "numpy",
    "pandas",
    "xhistogram",
    "xarray",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff>=0.1.7",
]

[project.urls]
Homepage = "https://github.com/brews/ca_knell"
Documentation = "https://github.com/brews/ca_knell"
Source = "https://github.com/brews/ca_knell"
"Bug Tracker" = "https://github.com/brews/ca_knell/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "999"

[tool.hatch.build.hooks.vcs]
version-file = "src/ca_knell/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.ruff]
exclude = ["scripts/*.py"]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: long lines
ignore = [
    "E402",
    "E501",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # Pyupgrade
    "UP",
]