[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ca_knell"
description = "Petting zoo playing with climate impact projections with isku"
readme = "README.md"
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
  "fsspec",
  "metacsv",
  "numpy",
  "pandas",
  "xhistogram",
  "xarray>=2026.4.0",
  "cftime",
  "isku>=0.3.0",
]

[dependency-groups]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.50",
]
dev = [{ include-group = "test" }]

[project.urls]
Homepage = "https://github.com/brews/ca_knell"
Documentation = "https://github.com/brews/ca_knell"
Source = "https://github.com/brews/ca_knell"
"Bug Tracker" = "https://github.com/brews/ca_knell/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "999"

[tool.hatch.build.hooks.vcs]
version-file = "src/ca_knell/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.pytest.ini_options]
addopts = ["--ignore=scripts"]

[tool.ruff]
exclude = ["scripts/*.py"]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: long lines
ignore = ["E402", "E501"]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Pyupgrade
  "UP",
]
